Sim modal complete

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -16,8 +16,8 @@
     <script src='/angular.js'></script>
     <script src='/angular-cookies.js'></script>
     <script src='/angular-messages.js'></script>
+    <script src='/angular-animate.js'></script>
     <script src='/angular-ui-router.js'></script>
-    <script src='/ui-bootstrap.js'></script>
     <script src='/ui-bootstrap-tpls.js'></script>
     <script src='/autosize.js'></script>
     <script src='/tabby.js'></script>
