--- a/client/src/states/home/home.html
+++ b/client/src/states/home/home.html
@@ -42,7 +42,7 @@
         </blockquote>
       </li>
       <li>
-        Daniel Dennet argues that individuals are biased and good at arguing for extreme positions. They're specialists at one-sided arguments. This doesn't work well in isolation, but it does work well in groups where there is a back and forth.
+        Daniel Dennet argues that individuals are biased and good at arguing for extreme positions. They're specialists in one-sided arguments. This doesn't work well in isolation, but it does work well in groups where there is a back and forth.
         <div class='embed-responsive embed-responsive-4by3'>
           <iframe src='https://www.youtube.com/embed/ImE6-3GuvhE?start=645' class='embed-responsive-item' frameborder='0' allowfullscreen></iframe>
         </div>
