--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -33,39 +33,39 @@
     <p class='menu clear' ng-show='vm.statement.focus'>
       <span
         class='glyphicon glyphicon-remove'
-        tooltip-html='vm.deleteStatementHtml'
-        tooltip-placement='left'
+        uib-tooltip-html='vm.deleteStatementHtml'
+        uib-tooltip-placement='left'
         ng-mousedown='vm.deleteStatement($event)'>
       </span>
       <span class='bullet'> &bull; </span>
       <span
         class='glyphicon glyphicon-indent-left'
-        tooltip-html='vm.indentRightHtml'
-        tooltip-placement='bottom'
+        uib-tooltip-html='vm.indentRightHtml'
+        uib-tooltip-placement='bottom'
         ng-mousedown='vm.indentRight()'>
       </span>
       <span
         class='glyphicon glyphicon-indent-right'
-        tooltip-html='vm.indentLeftHtml'
-        tooltip-placement='bottom'
+        uib-tooltip-html='vm.indentLeftHtml'
+        uib-tooltip-placement='bottom'
         ng-mousedown='vm.indentLeft()'>
       </span>
       <span class='bullet'> &bull; </span>
       <span
         class='glyphicon glyphicon-chevron-up'
-        tooltip-html='vm.upOneHtml'
-        tooltip-placement='bottom'>
+        uib-tooltip-html='vm.upOneHtml'
+        uib-tooltip-placement='bottom'>
       </span>
       <span
         class='glyphicon glyphicon-chevron-down'
-        tooltip-html='vm.downOneHtml'
-        tooltip-placement='bottom'>
+        uib-tooltip-html='vm.downOneHtml'
+        uib-tooltip-placement='bottom'>
       </span>
       <span class='bullet'> &bull; </span>
       <span
         class='glyphicon glyphicon-plus'
-        tooltip-html='vm.insertNextStatementHtml'
-        tooltip-placement='bottom'
+        uib-tooltip-html='vm.insertNextStatementHtml'
+        uib-tooltip-placement='bottom'
         ng-mousedown='vm.insertNextStatement($event)'>
       </span>
     </p>
