--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -10,7 +10,10 @@
 <div class='sims'>
   <p>
     <strong>Sims</strong>
-    <span class='glyphicon glyphicon-question-sign'></span>
+    <span
+      class='glyphicon glyphicon-question-sign'
+      ng-click='vm.openSimModal()'>
+    </span>
   </p>
   <div class='sim' ng-repeat='sim in vm.tango.sims track by $index'>
     <label>Name: </label>
