--- a/client/src/states/home/home.html
+++ b/client/src/states/home/home.html
@@ -1,8 +1,8 @@
 <div class='home-template'>
 
-<alert type='success' close='vm.closeLogoutFlash()' ng-if='vm.logoutFlash' dismiss-on-timeout='2000'>
+<uib-alert type='success' close='vm.closeLogoutFlash()' ng-if='vm.logoutFlash' dismiss-on-timeout='2000'>
   Successfully logged out.
-</alert>
+</uib-alert>
 
 <h1>
   Tango
