--- a/client/src/index.html
+++ b/client/src/index.html
@@ -34,6 +34,8 @@
     <script src='/states/navbar/navbar.directive.js'></script>
     <script src='/states/users/myTangos/myTangos.controller.js'></script>
     <script src='/states/users/myTangos/myTangos.routes.js'></script>
+    <script src='/states/users/mySims/mySims.controller.js'></script>
+    <script src='/states/users/mySims/mySims.routes.js'></script>
     <script src='/states/users/settings/settings.controller.js'></script>
     <script src='/states/users/settings/settings.routes.js'></script>
     <script src='/states/users/admin/admin.controller.js'></script>
@@ -51,6 +53,14 @@
     <script src='/shared/directives/azLoading/azLoading.directive.js'></script>
   </head>
   <body>
+    <uib-alert ng-if='successAlert' type='success' close='closeSuccessAlert()' dismiss-on-timeout='2000'>
+      {{ successAlert }}
+    </uib-alert>
+
+    <uib-alert ng-if='errorAlert' type='danger' close='closeErrorAlert()'>
+      {{ errorAlert }}
+    </uib-alert>
+
     <div class='az-lightbox'></div>
     <navbar></navbar>
     <div class='container' ui-view></div>
