--- a/client/src/states/users/mySims/mySims.html
+++ b/client/src/states/users/mySims/mySims.html
@@ -1,4 +1,9 @@
-<div class='new-tango-template'>
+<div class='page-header'>
+  <h1>My Sims</h1>
+</div>
+
+<p>These sims will be available for you to load in your Tangos.</p>
+<br /><br />
 
 <div class='sims'>
   <p>
@@ -8,7 +13,8 @@
       ng-click='vm.openSimModal()'>
     </span>
   </p>
-  <div class='sim' ng-repeat='sim in vm.tango.sims track by $index'>
+  <p ng-hide='vm.user.sims.length > 0'>You have no Sims. Click below to create one.</p>
+  <div class='sim' ng-repeat='sim in vm.user.sims track by $index'>
     <label>Name: </label>
     <input
       type='text'
@@ -32,25 +38,10 @@
   </span>
 </div>
 
-<div class='page-header'>
-  <input type='text' ng-model='vm.tango.title'>
-</div>
-
-<statement
-  ng-repeat='statement in vm.tango.statements track by $index'
-  statement='statement'
-  sims='vm.tango.sims'
-  level='0'>
-</statement>
-
-<hr />
-
+<br />
 <button
-  az-loading='Submitting...'
-  on-click='vm.submit()'
-  class='btn btn-primary'
-  ng-hide='vm.unauthorized'>
-  {{ vm.submitText }}
+  az-loading='Saving...'
+  on-click='vm.save()'
+  class='btn btn-primary'>
+  Save
 </button>
-
-</div>
