--- a/client/src/states/users/myTangos/myTangos.html
+++ b/client/src/states/users/myTangos/myTangos.html
@@ -1,17 +1,14 @@
 <div class='my-tangos-template'>
 
-<uib-alert ng-if='vm.alertSuccess' type='success' close='vm.closeAlertSuccess()' dismiss-on-timeout='2000'>
-  {{ vm.alertSuccess }}
-</uib-alert>
-<uib-alert ng-if='vm.alertFailure' type='danger' close='vm.closeAlertFailure()'>
-  {{ vm.alertFailure}}
-</uib-alert>
-
 <div class='page-header'>
   <h1>My Tangos</h1>
 </div>
 
-<table class='table'>
+<p ng-if='vm.user.tangos.length === 0'>
+  You don't have any Tangos.
+</p>
+
+<table class='table' ng-if='vm.user.tangos.length > 0'>
   <thead>
     <tr>
       <th>Title</th>
