--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -4,8 +4,13 @@
   <p>
     <strong>Sims</strong>
     <span
+      class='glyphicon glyphicon-download'
+      ng-click='vm.openLoadModal()'>
+    </span>
+    <span
       class='glyphicon glyphicon-question-sign'
-      ng-click='vm.openSimModal()'>
+      ng-click='vm.openSimModal()'
+      ng-hide='vm.unauthorized'>
     </span>
   </p>
   <div class='sim' ng-repeat='sim in vm.tango.sims track by $index'>
