Functionality working. Need to come up with a UI and do the backend/schema stuff.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -43,6 +43,7 @@
     <script src='/states/tangos/tango.controller.js'></script>
     <script src='/states/tangos/tango.routes.js'></script>
     <script src='/states/tangos/statementDirective/statement.directive.js'></script>
+    <script src='/states/tangos/statementDirective/Reactions.value.js'></script>
 
     <!-- shared -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
