--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -30,7 +30,7 @@
 
   <!-- MENU RIGHT -->
   <div class='menu-container'>
-    <p class='menu clear'>
+    <p class='menu clear' ng-show='vm.statement.focus'>
       <span
         class='glyphicon glyphicon-remove'
         uib-tooltip-html='vm.deleteStatementHtml'
