Commands section done

--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -41,13 +41,13 @@
   <div class='commands'>
     <p><strong>Commands</strong></p>
     <ul>
-      <li>Insert Statement: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>enter</code></li>
-      <li>Delete Statement: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>delete</code></li>
-      <li>Toggle Sim: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>j</code></li>
-      <li>Up one: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>&uarr;</code></li>
-      <li>Down one: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>&darr;</code></li>
-      <li>Indent right: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>]</code></li>
-      <li>Indent left: <code>⌘</code>/<code>⊞</code> + <code>ctrl</code> + <code>[</code></li>
+      <li>Insert Statement: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>enter</code></span></li>
+      <li>Delete Statement: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>delete</code></span></li>
+      <li>Toggle Sim: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>j</code></span></li>
+      <li>Up one: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>&uarr;</code></span></li>
+      <li>Down one: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>&darr;</code></span></li>
+      <li>Indent right: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>]</code></span></li>
+      <li>Indent left: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>[</code></span></li>
     </ul>
   </div>
 </div>
