Fixed reactions bug

--- a/client/src/states/tangos/statementDirective/reactions.html
+++ b/client/src/states/tangos/statementDirective/reactions.html
@@ -3,7 +3,7 @@
     <span
       ng-repeat='reaction in vm.reactions track by $index'
       ng-mouseover='vm.hoverReaction(reaction)'
-      ng-mousedown='vm.selectReaction(reaction, $event)'
+      ng-mousedown='vm.selectReaction(reaction)'
       class='fa fa-smile-o reaction'>
     </span>
   </div>
