--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -41,6 +41,7 @@
   <div class='commands'>
     <p><strong>Commands</strong></p>
     <ul>
+      <li><em>while a statement is selected</em></li>
       <li>Insert Statement: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>enter</code></span></li>
       <li>Delete Statement: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>delete</code></span></li>
       <li>Toggle Sim: <span><code>⌘/⊞</code> + <code>ctrl</code> + <code>j</code></span></li>
