Updated home page

--- a/client/src/states/home/home.html
+++ b/client/src/states/home/home.html
@@ -15,7 +15,7 @@
 
 <div class='row'>
   <div class='col-xs-5 content'>
-    <h3>Benefit #1 - Visualize the structure. Offload your working memory.</h3>
+    <h3>Benefit #1 - Visualize nested structure. Offload your working memory.</h3>
     <ul>
       <li>
         <a href='https://medium.com/@adamzerner/representation-matters-f46d7acf8786'>Representation matters.</a>
@@ -26,6 +26,7 @@
       </li>
       <li>It's easier when the structure of your thoughts is right in front of you.</li>
       <li>Tango presents this structure to you.</li>
+      <li>Statements are collapsable, which makes it easier to see the big picture.</li>
     </ul>
 
     <h3>Benefit #2 - Back and forth is necessary.</h3>
@@ -44,6 +45,12 @@
         </div>
       </li>
       <li>Tango helps you simulate this back and forth by using Sims.</li>
+    </ul>
+
+    <h3>Benefit #3 - Reactions</h3>
+    <ul>
+      <li>Label something as fallacious with concise reactions.</li>
+      <li>The conciceness of the reacitons keeps the structure clean.</li>
     </ul>
   </div>
   <div class='col-xs-7'>
