--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -58,7 +58,7 @@
 </div>
 
 <statement
-  ng-repeat='statement in vm.tango.statements track by $index'
+  ng-repeat='statement in vm.tango.statements'
   statement='statement'
   sims='vm.tango.sims'
   level='0'>
